// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step should render 1`] = `
.c2 {
  color: #E5E5E5;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  color: #00C8DC;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c4 {
  margin-top: 8px;
  margin-bottom: 0;
  position: relative;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  border: 4px solid #E5E5E5;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #E5E5E5;
  box-shadow: 0 0 0 #E5E5E5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  cursor: default;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0 8px;
}

.c1 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

@media (max-width:752px) {
  .c3 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
  >
    <span
      className="c2"
      color="grey2"
    >
      Sign In
    </span>
    <span
      className="c2 c3"
      color="grey2"
    >
      Test description
    </span>
    <div
      className="c4"
    >
      <div
        className="c5"
        color="primary"
      >
        <span
          className="c6"
          color="primary"
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`Step should render with custom connector 1`] = `
.c4 {
  color: #E5E5E5;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c8 {
  color: #00C8DC;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  margin-top: 8px;
  margin-bottom: 0;
  position: relative;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7 {
  border: 4px solid #E5E5E5;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #E5E5E5;
  box-shadow: 0 0 0 #E5E5E5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  cursor: default;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0 8px;
}

.c3 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  position: absolute;
  bottom: 8px;
  left: -50%;
  right: 50%;
}

.c2 {
  border-color: #000000;
  border-style: solid;
  border-top-width: 4px;
  border-bottom-width: 4px;
  border-radius: 4px;
  display: block;
  position: 'relative';
  z-index: 'auto';
}

@media (max-width:752px) {
  .c5 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
    />
  </div>
  <span
    className="c3"
  >
    <span
      className="c4"
      color="grey2"
    >
      Sign In
    </span>
    <span
      className="c4 c5"
      color="grey2"
    >
      Test description
    </span>
    <div
      className="c6"
    >
      <div
        className="c7"
        color="primary"
      >
        <span
          className="c8"
          color="primary"
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`Step should render with custom icon 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #E5E5E5;
}

.c6 svg g,
.c6 svg p {
  fill: #E5E5E5;
}

.c2 {
  color: #E5E5E5;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c4 {
  margin-top: 8px;
  margin-bottom: 0;
  position: relative;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  border: 4px solid #E5E5E5;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #E5E5E5;
  box-shadow: 0 0 0 #E5E5E5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  cursor: default;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0 8px;
}

.c1 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

@media (max-width:752px) {
  .c3 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
  >
    <span
      className="c2"
      color="grey2"
    >
      Sign In
    </span>
    <span
      className="c2 c3"
      color="grey2"
    >
      Test description
    </span>
    <div
      className="c4"
    >
      <div
        className="c5"
        color="primary"
      >
        <div
          className="c6"
          color="grey2"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M434.5 72.3V412c0 33.6-27.5 61.1-61 61.1H126.7c-5.6 0-11-1-16.2-2.5 7.8 23.7 30 41.1 56.2 41.1h249.9c32.7 0 59.5-26.8 59.5-59.5V128.8c0-26.5-17.6-48.8-41.6-56.5z"
            />
            <path
              d="M345.2 0H95.4C62.7 0 35.9 26.8 35.9 59.5V383c0 32.7 26.8 59.5 59.5 59.5h249.9c32.7 0 59.5-26.8 59.5-59.5V59.5C404.7 26.8 378 0 345.2 0zm19 349.8c0 25.7-21.1 46.8-46.8 46.8H120.9c-25.7 0-46.8-21.1-46.8-46.8V95.4c0-25.7 21.1-46.8 46.8-46.8h196.6c25.7 0 46.8 21.1 46.8 46.8v254.4z"
            />
            <path
              d="M319.8 117.5H190.5c-5.4 0-9.8-4.4-9.8-9.8v-.7c0-5.4 4.4-9.8 9.8-9.8h129.3c5.4 0 9.8 4.4 9.8 9.8v.7c.1 5.4-4.4 9.8-9.8 9.8zM319.8 175.2H120.4c-5.4 0-9.8-4.4-9.8-9.8v-.7c0-5.4 4.4-9.8 9.8-9.8h199.5c5.4 0 9.8 4.4 9.8 9.8v.7c0 5.3-4.5 9.8-9.9 9.8zM319.8 232.8H120.4c-5.4 0-9.8-4.4-9.8-9.8v-.7c0-5.4 4.4-9.8 9.8-9.8h199.5c5.4 0 9.8 4.4 9.8 9.8v.7c0 5.4-4.5 9.8-9.9 9.8zM319.8 290.5H120.4c-5.4 0-9.8-4.4-9.8-9.8v-.7c0-5.4 4.4-9.8 9.8-9.8h199.5c5.4 0 9.8 4.4 9.8 9.8v.7c0 5.4-4.5 9.8-9.9 9.8zM319.8 348.2H120.4c-5.4 0-9.8-4.4-9.8-9.8v-.7c0-5.4 4.4-9.8 9.8-9.8h199.5c5.4 0 9.8 4.4 9.8 9.8v.7c0 5.3-4.5 9.8-9.9 9.8z"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>
</div>
`;
